Models basic functionality

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         document.write(unescape("%3Cscript src='assets/common/libs/backbone-min.js' type='text/javascript'%3E%3C/script%3E"));
     }</script>
 
+    <script src="assets/common/lib/backbone.localStorage-min.js"></script>
+
 
     <!-- build:js:dev assets/js/fm.min.js -->
     <!-- Pre init script -->
