--- a/index.html
+++ b/index.html
@@ -1,148 +1,218 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>MB File Manager</title>
+	<meta charset="UTF-8">
+	<title>MB File Manager</title>
 
-    <!-- build:css:dev assets/css/fm.min.css -->
+	<!-- build:css:dev assets/css/fm.min.css -->
 
-    <!-- Reset default styles -->
-    <link rel="stylesheet" href="assets/common/css/normalize.css" media="all" type="text/css">
+	<!-- Reset default styles -->
+	<link rel="stylesheet" href="assets/css/normalize.css" media="all" type="text/css">
 
-    <!-- Third-party styles -->
+	<!-- Third-party styles -->
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+		  integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <!-- Application styles -->
-    <link rel="stylesheet" href="assets/common/css/main.css" media="all" type="text/css">
+	<!-- Application styles -->
+	<link rel="stylesheet" href="assets/css/main.css" media="all" type="text/css">
 
-    <!-- /build -->
+	<!-- /build -->
 
-    <!-- Third-Party Libraries -->
-    <!-- Jquery -->
-    <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script>if (typeof jQuery === 'undefined') {
-        document.write(unescape("%3Cscript src='assets/common/libs/jquery-1.12.0.min.js' type='text/javascript'%3E%3C/script%3E"));
-    }</script>
+	<!-- Third-Party Libraries -->
+	<!-- Jquery -->
+	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script>if (typeof jQuery === 'undefined') {
+		document.write(unescape("%3Cscript src='assets/libs/jquery-1.12.0.min.js' type='text/javascript'%3E%3C/script%3E"));
+	}</script>
 
-    <!-- Bootstrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-            crossorigin="anonymous"></script>
-    <script>if (typeof $.fn.modal === 'undefined') {
-        document.write(unescape("%3Clink rel='stylesheet' href='assets/common/libs/bootstrap-3.3.6/bootstrap.min.css' media='all' type='text/css'%3E"));
-        document.write(unescape("%3Cscript src='assets/common/libs/bootstrap-3.3.6/bootstrap.min.js' type='text/javascript'%3E%3C/script%3E"));
-    }</script>
+	<!-- Bootstrap -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+			integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+			crossorigin="anonymous"></script>
+	<script>if (typeof $.fn.modal === 'undefined') {
+		document.write(unescape("%3Clink rel='stylesheet' href='assets/libs/bootstrap-3.3.6/bootstrap.min.css' media='all' type='text/css'%3E"));
+		document.write(unescape("%3Cscript src='assets/libs/bootstrap-3.3.6/bootstrap.min.js' type='text/javascript'%3E%3C/script%3E"));
+	}</script>
 
-    <!-- Framework sources and dependencies -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script>if (typeof _ === 'undefined') {
-        document.write(unescape("%3Cscript src='assets/common/libs/underscore-min.js' type='text/javascript'%3E%3C/script%3E"));
-    }</script>
+	<!-- Framework sources and dependencies -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+	<script>if (typeof _ === 'undefined') {
+		document.write(unescape("%3Cscript src='assets/libs/underscore-min.js' type='text/javascript'%3E%3C/script%3E"));
+	}</script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
-    <script>if (typeof Backbone === 'undefined') {
-        document.write(unescape("%3Cscript src='assets/common/libs/backbone-min.js' type='text/javascript'%3E%3C/script%3E"));
-    }</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
+	<script>if (typeof Backbone === 'undefined') {
+		document.write(unescape("%3Cscript src='assets/libs/backbone-min.js' type='text/javascript'%3E%3C/script%3E"));
+	}</script>
 
-    <script src="assets/common/lib/backbone.localStorage-min.js"></script>
+	<script src="assets/lib/backbone.localStorage-min.js"></script>
 
+	<!-- File saver functionality -->
+	<script src="assets/lib/FileSaver/Blob.js"></script>
+	<script src="assets/lib/FileSaver/FileSaver.min.js"></script>
 
-    <!-- build:js:dev assets/js/fm.min.js -->
-    <!-- Pre init script -->
-    <script src="assets/common/js/pre-init.js"></script>
+	<!-- build:js:dev assets/js/fm.min.js -->
+	<script src="src/extensions/Collection.save.js"></script>
 
-    <!-- Utils -->
-    <script src="assets/common/js/utils.js"></script>
+	<!-- Pre init script -->
+	<script src="assets/js/pre-init.js"></script>
+	<script src="assets/mock/init_state_data.js"></script>
 
-    <!-- Application sources -->
+	<!-- Utils -->
+	<script src="assets/js/utils.js"></script>
 
-    <!-- Application initialization -->
-    <script src="assets/common/js/init.js"></script>
+	<!-- Application sources -->
+	<script src="src/modules/const.js"></script>
+	<script src="src/modules/file/file.js"></script>
+	<script src="src/modules/file/file_text.js"></script>
 
-    <!-- /build -->
+	<script src="src/modules/files/files.js"></script>
+	<script src="src/modules/files/files_view.js"></script>
+
+	<script src="src/modules/bookmarks/bookmarks.js"></script>
+	<script src="src/modules/bookmarks/bookmarks_view.js"></script>
+
+	<script src="src/application.js"></script>
+
+	<!-- Application initialization -->
+	<script src="assets/js/init.js"></script>
+
+	<!-- /build -->
 </head>
 <body>
 
 <div class="page-header">
-    <h1>MB File Manager
-        <small>File list</small>
-    </h1>
+	<h1>MB File Manager
+		<small id="file-list-sub-header">File list</small>
+		<small id="bookmarks-sub-header">Bookmarks</small>
+	</h1>
 </div>
 
 <div class="panel panel-default">
-    <table class="table">
-        <tr class="text-center">
-            <th><a id="file-name-sort" href="">File name <span id="file-name-icon"
-                                                               class="glyphicon glyphicon-chevron-down"></span></a></th>
-            <th><a id="file-type-sort" href="">File type <span id="file-type-icon"
-                                                               class="glyphicon glyphicon-chevron-down"></span></a></th>
-            <th><a id="size-sort" href="">Size (Kb) <span id="size-icon"
-                                                          class="glyphicon glyphicon-chevron-down"></span></a></th>
-            <th>Action</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td id="actions" rowspan="4">
-                <a href=""><span class="glyphicon glyphicon-download-alt"></span> Download</a>
-                <a href=""><span class="glyphicon glyphicon-eye-open"></span> Preview</a>
-                <a href=""><span class="glyphicon glyphicon-bookmark"></span> Bookmark</a>
-                <a href=""><span class="glyphicon glyphicon-pencil"></span> Edit</a>
-            </td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td></td>
-        </tr>
-        <tr class="fixed-row">
-            <td>
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
+	<table id="files-list" class="table">
+		<tr class="text-center">
+			<th><a href="">File name <span class="glyphicon"></span></a></th>
+			<th><a href="">File type <span class="glyphicon"></span></a></th>
+			<th><a href="">Size (Kb) <span class="glyphicon"></span></a></th>
+			<th>Action</th>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td rowspan="4">
+				Select file at the left side by clicking on it.
+			</td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td></td>
+		</tr>
+		<tr class="fixed-row">
+			<td>
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search for...">
                     <span class="input-group-btn">
-                    <button id="file-name-filter" class="btn btn-default glyphicon glyphicon-search" type="button"></button>
+                    <button class="btn btn-default glyphicon glyphicon-search"
+							type="button"></button>
                     </span>
-                </div>
-            </td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-    <div class="panel-footer">
-        <div class="btn-group" role="group" aria-label="">
-            <ul class="nav nav-pills">
-                <li role="presentation" class="active"><a href="#">File List</a></li>
-                <li role="presentation"><a href="#">Bookmarks</a></li>
-            </ul>
-        </div>
-        <div class="btn-group float-right" role="group" aria-label="">
-            <button type="button" class="btn btn-default" disabled="disabled">Upload</button>
-            <button type="button" class="btn btn-default">Create New Text File</button>
-        </div>
-    </div>
+				</div>
+			</td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
+	<div class="panel-footer">
+		<div class="btn-group" role="group" aria-label="">
+			<ul class="nav nav-pills">
+				<li id="file-list-nav" role="presentation" class="active"><a href="#files">File List</a></li>
+				<li id="bookmarks-nav" role="presentation"><a href="#bookmarks">Bookmarks</a></li>
+			</ul>
+		</div>
+		<div id="global-actions" class="btn-group float-right" role="group" aria-label="">
+			<button type="button" class="btn btn-default" disabled="disabled">Upload</button>
+			<a href="#file/new">
+				<button type="button" class="btn btn-default">Create New Text File</button>
+			</a>
+		</div>
+	</div>
 </div>
 
-<div>
 
-</div>
+<script type="text/template" id="files-list-tpl">
+	<tbody>
+	<tr class="text-center">
+		<th><a id="file-name-sort" href="">File name <span id="file-name-icon"
+														   class="glyphicon"></span></a></th>
+		<th><a id="file-type-sort" href="">File type <span id="file-type-icon"
+														   class="glyphicon"></span></a></th>
+		<th><a id="size-sort" href="">Size (Kb) <span id="size-icon"
+													  class="glyphicon"></span></a></th>
+		<th>Action</th>
+	</tr>
+	<% _.each(fileList, function(file, index) { %>
+	<tr id="file-row-<%= index %>" data-index="<%= index %>"
+	<% if(selectedIndex === index) { %>class="selected"<% } %>>
+	<td class="row-select"><%= file.name %></td>
+	<td class="row-select"><%= file.type %></td>
+	<td class="row-select"><%= file.size %></td>
+	<% if(index === 0) { %>
+	<td id="actions" rowspan="4">
+		<% if(selectedIndex >= 0) { %>
+		<a id="download-action" href="#" data-index="<%= selectedIndex %>"><span
+				class="glyphicon glyphicon-download-alt"></span> Download</a>
+		<!--<a href=""><span class="glyphicon glyphicon-eye-open"></span> Preview</a>-->
+		<a id="bookmark-action" data-index="<%= selectedIndex %>" href="#"><span
+				class="glyphicon glyphicon-bookmark"></span> Bookmark</a>
+		<a id="edit-action" href="#file/<%= selectedIndex %>/edit"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+
+		<div class="file-name">File selected: <span class="bold"><%= fileList[selectedIndex].name %></span></div>
+		<% } else { %>
+		Select file at the left side by clicking on it.
+		<% } %>
+	</td>
+	<% } else { %>
+	<td></td>
+	<% } %>
+	</tr>
+	<% }) %>
+	<tr class="fixed-row">
+		<td>
+			<div class="input-group">
+				<input id="file-name-pattern" type="text" class="form-control" placeholder="Search for...">
+						<span class="input-group-btn">
+						<button id="file-name-filter" class="btn btn-default glyphicon glyphicon-search"
+								type="button"></button>
+						</span>
+			</div>
+		</td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	</tbody>
+</script>
+
+<script type="text/template" id="actions-list-tpl">
+
+</script>
 
 </body>
 </html>
