Finished file new/edit components

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
 			<textarea class="form-control" rows="5" id="insert-filecontent"><%= file.content %></textarea>
 		</div>
 		<div class="btn-group float-right" role="group" aria-label="">
-			<button type="button" class="btn btn-default">Cancel</button>
-			<button type="button" class="btn btn-default">Save</button>
+			<button id="cancel" type="button" class="btn btn-default">Cancel</button>
+			<button id="save" type="button" class="btn btn-default">Save</button>
 		</div>
 	</div>
 	<input id="file-id" type="hidden" value="<%= file.id %>">
